--- a/app/src/main/res/layout/item_timenote.xml
+++ b/app/src/main/res/layout/item_timenote.xml
@@ -1,6 +1,119 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <ImageView
+        android:src="@drawable/ic_linkedin"
+        android:id="@+id/timenote_pic_user_imageview"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="36dp"
+        android:layout_height="36dp"/>
+
+    <TextView
+        android:id="@+id/timenote_username"
+        android:layout_marginStart="8dp"
+        android:textStyle="bold"
+        tools:text="username"
+        android:textSize="16sp"
+        android:textColor="@color/colorText"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toEndOf="@id/timenote_pic_user_imageview"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <TextView
+        android:id="@+id/timenote_place"
+        tools:text="34 Ohio Street"
+        android:textColor="@color/colorTextThirdly"
+        android:textSize="12sp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintStart_toEndOf="@id/timenote_pic_user_imageview"
+        app:layout_constraintTop_toBottomOf="@id/timenote_username"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <ImageView
+        android:scaleType="centerCrop"
+        android:id="@+id/timenote_pic_imageview"
+        android:src="@drawable/beach"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/timenote_pic_user_imageview"
+        android:layout_width="match_parent"
+        android:layout_height="250dp"/>
+
+    <ImageView
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="8dp"
+        android:src="@drawable/ic_heart"
+        android:id="@+id/timenote_like"
+        app:layout_constraintTop_toBottomOf="@id/timenote_pic_imageview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <ImageView
+        android:src="@drawable/ic_chat"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="16dp"
+        android:id="@+id/timenote_comment"
+        app:layout_constraintStart_toEndOf="@id/timenote_like"
+        app:layout_constraintTop_toBottomOf="@id/timenote_pic_imageview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <ImageView
+        android:src="@drawable/ic_telegram"
+        android:id="@+id/timenote_share"
+        app:layout_constraintStart_toEndOf="@id/timenote_comment"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@id/timenote_pic_imageview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <TextView
+        tools:text="354 likes"
+        android:textStyle="bold"
+        android:textColor="@color/colorText"
+        android:textSize="12sp"
+        app:layout_constraintTop_toBottomOf="@id/timenote_like"
+        android:layout_marginTop="8dp"
+        android:id="@+id/timenote_like_number"
+        android:layout_marginStart="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <TextView
+        android:layout_marginTop="4dp"
+        android:layout_marginStart="8dp"
+        android:textSize="12sp"
+        tools:text="username"
+        android:id="@+id/timenote_username_desc"
+        android:textColor="@color/colorText"
+        app:layout_constraintTop_toBottomOf="@id/timenote_like_number"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <TextView
+        android:id="@+id/timenote_see_comments"
+        tools:text="Voir les 354 commentaires"
+        android:textSize="12sp"
+        android:layout_marginTop="4dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/timenote_username_desc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
