--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,7 @@
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:visibility="gone"
+        app:labelVisibilityMode="unlabeled"
         android:id="@+id/bottomNavView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
