--- a/app/src/main/res/layout/fragment_create_timenote.xml
+++ b/app/src/main/res/layout/fragment_create_timenote.xml
@@ -258,6 +258,17 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
 
+                <AutoCompleteTextView
+                    android:visibility="gone"
+                    android:hint="@string/action_search"
+                    android:id="@+id/create_timenote_autocompleteTextview_Address"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.cardview.widget.CardView>
