--- a/app/src/main/res/layout/fragment_profil_modify.xml
+++ b/app/src/main/res/layout/fragment_profil_modify.xml
@@ -4,6 +4,8 @@
     xmlns:fancy="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@android:color/white"
+    android:paddingBottom="8dp"
+    android:clipToPadding="false"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -67,7 +69,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
-            <EditText
+            <TextView
                 android:id="@+id/profile_modify_name_appearance"
                 android:drawablePadding="8dp"
                 android:hint="@string/name_you_want_to_appear"
@@ -82,7 +84,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
-            <EditText
+            <TextView
+                app:layout_constraintTop_toBottomOf="@id/profile_modify_name_appearance"
+                style="@style/AppTheme.Divider.Toolbar"/>
+
+
+            <TextView
                 android:id="@+id/profile_modify_name"
                 android:drawablePadding="8dp"
                 android:hint="@string/your_name"
@@ -95,8 +102,11 @@
                 app:layout_constraintTop_toBottomOf="@id/profile_modify_name_appearance"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
+            <TextView
+                app:layout_constraintTop_toBottomOf="@id/profile_modify_name"
+                style="@style/AppTheme.Divider.Toolbar"/>
 
-            <EditText
+            <TextView
                 android:id="@+id/profile_modify_from"
                 android:drawablePadding="8dp"
                 android:hint="@string/from"
@@ -111,10 +121,14 @@
                 android:layout_height="wrap_content"/>
 
             <TextView
+                app:layout_constraintTop_toBottomOf="@id/profile_modify_from"
+                style="@style/AppTheme.Divider.Toolbar"/>
+
+            <TextView
                 android:focusable="false"
                 android:id="@+id/profile_modify_birthday"
                 android:drawablePadding="8dp"
-                android:text="@string/birthday"
+                android:hint="@string/birthday"
                 android:textColor="@color/colorText"
                 android:textSize="15sp"
                 android:padding="16dp"
@@ -134,7 +148,7 @@
                 android:focusable="false"
                 android:id="@+id/profile_modify_gender"
                 android:drawablePadding="8dp"
-                android:text="@string/gender"
+                android:hint="@string/gender"
                 android:textColor="@color/colorText"
                 android:textSize="15sp"
                 android:padding="16dp"
@@ -153,7 +167,7 @@
                 android:focusable="false"
                 android:id="@+id/profile_modify_account_status"
                 android:drawablePadding="8dp"
-                android:text="@string/account_status"
+                android:hint="@string/account_status"
                 android:textColor="@color/colorText"
                 android:textSize="15sp"
                 android:padding="16dp"
@@ -172,7 +186,7 @@
                 android:focusable="false"
                 android:id="@+id/profile_modify_format_timenote"
                 android:drawablePadding="8dp"
-                android:text="@string/timenote_date_format"
+                android:hint="@string/timenote_date_format"
                 android:textColor="@color/colorText"
                 android:textSize="15sp"
                 android:padding="16dp"
@@ -187,7 +201,7 @@
                 app:layout_constraintTop_toBottomOf="@id/profile_modify_format_timenote"
                 style="@style/AppTheme.Divider.Toolbar"/>
 
-            <EditText
+            <TextView
                 android:id="@+id/profile_modify_youtube_channel"
                 android:drawablePadding="8dp"
                 android:hint="@string/youtube_channel"
@@ -202,8 +216,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
+            <TextView
+                app:layout_constraintTop_toBottomOf="@id/profile_modify_youtube_channel"
+                style="@style/AppTheme.Divider.Toolbar"/>
 
-            <EditText
+
+            <TextView
                 android:id="@+id/profile_modify_description"
                 android:drawablePadding="8dp"
                 android:hint="@string/describe_yourself"
@@ -218,6 +236,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
+            <TextView
+                app:layout_constraintTop_toBottomOf="@id/profile_modify_description"
+                style="@style/AppTheme.Divider.Toolbar"/>
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
