--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -223,27 +223,30 @@
                         app:layout_constraintTop_toBottomOf="@id/profile_modify_btn" />
 
                     <ImageView
+                        android:tint="@color/black"
                         android:id="@+id/profile_arrow_back_btn"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="16dp"
-                        android:src="@drawable/ic_arrow_back_black_24dp"
+                        android:src="@drawable/ic_baseline_keyboard_arrow_left_24"
                         app:layout_constraintEnd_toStartOf="@id/profile_arrow_forward_btn"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/profile_desc" />
 
                     <ImageView
+                        android:tint="@color/black"
                         android:id="@+id/profile_arrow_forward_btn"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="16dp"
-                        android:src="@drawable/ic_arrow_forward_black_24dp"
+                        android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                         app:layout_constraintEnd_toStartOf="@id/profile_view_type_btn"
                         app:layout_constraintStart_toEndOf="@id/profile_arrow_back_btn"
                         app:layout_constraintTop_toBottomOf="@id/profile_desc" />
 
 
                     <ImageView
+                        android:visibility="gone"
                         android:id="@+id/profile_view_type_btn"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -254,6 +257,7 @@
                         app:layout_constraintTop_toBottomOf="@id/profile_desc" />
 
                     <ImageView
+                        android:visibility="gone"
                         android:id="@+id/profile_filter_btn"
                         android:layout_width="22dp"
                         android:layout_height="22dp"
