--- a/app/src/main/res/layout/item_timenote.xml
+++ b/app/src/main/res/layout/item_timenote.xml
@@ -49,17 +49,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
-    <ImageView
-        android:src="@drawable/beach"
-        android:background="#20aaaaaa"
-        android:scaleType="centerCrop"
-        android:id="@+id/timenote_pic_imageview"
+    <androidx.viewpager2.widget.ViewPager2
         android:layout_marginTop="8dp"
+        android:id="@+id/timenote_vp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/timenote_pic_user_imageview"
+        android:scaleType="centerCrop"
         android:layout_width="match_parent"
         android:layout_height="250dp"/>
+
+    <me.relex.circleindicator.CircleIndicator3
+        android:layout_marginBottom="8dp"
+        app:layout_constraintEnd_toEndOf="@id/separator_2"
+        app:layout_constraintStart_toStartOf="@id/separator_1"
+        app:layout_constraintBottom_toBottomOf="@id/timenote_vp"
+        android:id="@+id/timenote_indicator"
+        android:layout_width="0dp"
+        android:layout_height="12dp"/>
 
     <TextView
         android:shadowDy="1"
@@ -74,7 +81,7 @@
         android:textAllCaps="true"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toTopOf="@id/timenote_pic_imageview"
+        app:layout_constraintTop_toTopOf="@id/timenote_vp"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
@@ -98,13 +105,13 @@
         android:layout_height="wrap_content"/>
 
     <TextView
+        android:layout_marginBottom="4dp"
         android:background="@drawable/custom"
-        android:layout_marginBottom="8dp"
         android:id="@+id/separator_1"
         android:fontFamily="sans-serif-light"
         app:layout_constraintEnd_toStartOf="@id/timenote_day_month"
         app:layout_constraintStart_toEndOf="@id/timenote_year"
-        app:layout_constraintBottom_toBottomOf="@id/timenote_pic_imageview"
+        app:layout_constraintBottom_toTopOf="@id/timenote_indicator"
         android:layout_width="2dp"
         android:layout_height="48dp"/>
 
@@ -127,13 +134,13 @@
         android:layout_height="wrap_content"/>
 
     <TextView
+        android:layout_marginBottom="4dp"
         android:background="@drawable/custom"
-        android:layout_marginBottom="8dp"
         android:fontFamily="sans-serif-light"
         android:id="@+id/separator_2"
         app:layout_constraintEnd_toStartOf="@id/timenote_time"
         app:layout_constraintStart_toEndOf="@id/timenote_day_month"
-        app:layout_constraintBottom_toBottomOf="@id/timenote_pic_imageview"
+        app:layout_constraintBottom_toTopOf="@id/timenote_indicator"
         android:layout_width="2dp"
         android:layout_height="48dp"/>
 
@@ -160,7 +167,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toBottomOf="@id/timenote_pic_imageview"
+        app:layout_constraintBottom_toBottomOf="@id/timenote_vp"
         android:id="@+id/timerProgramCountdown"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -188,7 +195,7 @@
         android:layout_marginStart="8dp"
         android:src="@drawable/ic_heart"
         android:id="@+id/timenote_like"
-        app:layout_constraintTop_toBottomOf="@id/timenote_pic_imageview"
+        app:layout_constraintTop_toBottomOf="@id/timenote_vp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
@@ -198,7 +205,7 @@
         android:layout_marginStart="16dp"
         android:id="@+id/timenote_comment"
         app:layout_constraintStart_toEndOf="@id/timenote_like"
-        app:layout_constraintTop_toBottomOf="@id/timenote_pic_imageview"
+        app:layout_constraintTop_toBottomOf="@id/timenote_vp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
@@ -208,7 +215,7 @@
         android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         android:src="@drawable/ic_add_circle_black_24dp"
-        app:layout_constraintTop_toBottomOf="@id/timenote_pic_imageview"
+        app:layout_constraintTop_toBottomOf="@id/timenote_vp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
