--- a/app/src/main/res/layout/item_more_web_search.xml
+++ b/app/src/main/res/layout/item_more_web_search.xml
@@ -12,6 +12,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_margin="8dp"
+        android:src="@drawable/ic_baseline_add_24"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
