--- a/app/src/main/res/layout/fragment_create_timenote.xml
+++ b/app/src/main/res/layout/fragment_create_timenote.xml
@@ -73,6 +73,7 @@
                     android:layout_height="wrap_content"/>
 
                 <ProgressBar
+                    android:layout_marginBottom="8dp"
                     android:layout_gravity="center"
                     android:visibility="gone"
                     android:id="@+id/create_timenote_pb"
