--- a/app/src/main/res/layout/adapter_search_explore.xml
+++ b/app/src/main/res/layout/adapter_search_explore.xml
@@ -3,6 +3,7 @@
 
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_marginTop="4dp"
+    android:background="@color/colorAccent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -11,13 +12,12 @@
 
     <ImageView
         android:id="@+id/search_explore_category_iv"
-        android:src="@drawable/category_sport"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@id/search_explore_rv"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
+        android:adjustViewBounds="true"
         android:layout_height="75dp"/>
 
     <TextView
@@ -39,6 +39,7 @@
         android:src="@drawable/ic_keyboard_arrow_down_black_24dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"/>
+
 
 
     <androidx.recyclerview.widget.RecyclerView
